# warpspeed25

./: .gitignore  README.md  agents.py  app.py  brutal.py  crewai overview.md  geminiapp.py  gigsbot.md  home.py  ideas.md  katha.py  log21june.md  payout_code.py  paywall.py  pyproject.toml
app/: app.py
